# frame-interpolation

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/interpolation_app/: evaluate_naive_interpolator.py  evaluation_runner.py  logger.py  runner.py
src/interpolation_app/datasets/: triplet_module.py
src/interpolation_app/evaluators/: evaluate_deep.py  evaluate_morphing.py  evaluate_naive.py  evaluate_optical_flow.py  evaluate_weighted.py
src/interpolation_app/interpolation/: base.py  deep_simple.py  morphing.py  naive.py  optical_flow.py  weighted.py
src/interpolation_app/losses/: interpolation_loss.py
src/interpolation_app/models/: simple_interpolator.py
src/interpolation_app/trainers/: simple_trainer.py
src/interpolation_app/utils/: image_utils.py  triplet_dataset.py
tests/: test_dataset.py  test_metrics.py  test_naive.py
