[tool.poetry]
name = "frame-interpolation"
version = "0.1.0"
description = ""
authors = ["Stimm147 <michalczewski0@gmail.com>"]
readme = "README.md"
packages = [
    { include = "interpolation_app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
