[tool.poetry]
name = "frame-interpolation"
version = "0.5.0"
description = ""
authors = ["Stimm147 <michalczewski0@gmail.com>"]
readme = "README.md"
packages = [
    { include = "interpolation_app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
opencv-python = "^4.11.0.86"
scikit-image = "^0.25.2"
lazy-loader = "^0.4"
typing-extensions = "^4.13.1"
tqdm = "^4.67.1"
lightning = {extras = ["extra"], version = "^2.5.1"}
kornia = "^0.8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.3"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
